# Efficient-Reasoner

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-core.txt  requirements.txt
configs/: default_config.yaml
eval/: __init__.py  benchmark.py  plot_pareto.py
scripts/: generate_sft.py  inference.py  train.py  train_sft.py
src/: __init__.py  config_parser.py  constants.py  dataset.py  mock_env.py  model_utils.py  rewards.py  tools.py  utils.py
tests/: test_config.py  test_dataset.py  test_fallback.py  test_imports.py  test_mock_env.py  test_rewards.py
